--- a/index.html
+++ b/index.html
@@ -16,82 +16,88 @@
     <body class="d-flex flex-column">
         <!--Navbar-->
         <header class="navbar navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a href="index.html" class="navbar-brand d-block w-25"><img src="logos/logo_negativo.svg"></a>
+            <div class="container">
+                <div class="navbar-brand">
+                    <a href="index.html" class="d-block w-25 h-25">
+                        <img src="logos/logo_negativo.svg">
+                    </a>
+                </div>
             </div>
         </header>
 
         <!--colunas com miniaturas dos carros-->
-        <section class="container p-5">
-            <div class="row">
-                <div class="col-md-6 col-lg-4 col-xl-3 text-center">
-                    <a href="produto_01.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
-                        <img src="carros/jeep-cherokee.jpg" alt="jeep-cherokee" class="rounded-3 d-block w-100">
-                        <h4>JEEP GRAND CHEROKEE<br>R$119.990,00</h4>
-                        <p>
-                            2015 - 100.000 Km
-                        </p>
-                    </a>
-                </div>  
-                <div class="col-md-6 col-lg-4 col-xl-3 text-center">
-                    <a href="produto_02.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
-                        <img src="carros/volkswagen-polo.jpg" alt="volkswagen-polo" class="rounded-3 d-block w-100">
-                        <h4>VOLKSWAGEN POLO<br>R$72.900,00</h4>
-                        <p>
-                            2021 - 56.000 Km
-                        </p>
-                    </a>
-                </div> 
-                <div class="col-md-6 col-lg-4 col-xl-3 text-center">
-                    <a href="produto_03.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
-                        <img src="carros/chevrolet-onix.jpg" alt="chevrolet-onix-plus" class="rounded-3 d-block w-100">
-                        <h4>CHEVROLET ONIX PLUS<br>R$105.990,00</h4>
-                        <p>
-                            2022 - 25.000 Km
-                        </p>
-                    </a>
-                </div> 
-                <div class="col-md-6 col-lg-4 col-xl-3 text-center">
-                    <a href="produto_04.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
-                        <img src="carros/fiat-argo.jpg" alt="fiat-argo" class="rounded-3 d-block w-100">
-                        <h4>FIAT ARGO<BR>R$56.900,00</h4>
-                        <p>
-                            2017 - 119.000 Km
-                        </p>
-                    </a>
-                </div> 
-                <div class="col-md-6 col-lg-4 col-xl-3 text-center">
-                    <a href="produto_05.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
-                        <img src="carros/renault-captur.jpg" alt="renault-captur" class="rounded-3 d-block w-100">
-                        <h4>RENAULT CAPTUR<br>R$86.180,00</h4>
-                        <p>
-                            2020 - 85.600 Km
-                        </p>
-                    </a>
-                </div> 
-                <div class="col-md-6 col-lg-4 col-xl-3 text-center">
-                    <a href="produto_06.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
-                        <img src="carros/fiat-toro.jpg" alt="fiat-toro" class="rounded-3 d-block w-100">
-                        <h4>FIAT TORO<br>R$102.000,00</h4>
-                        <p>
-                            2018 - 62.000 Km
-                        </p>
-                    </a>
-                </div> 
-                <div class="col-md-6 col-lg-4 col-xl-3 text-center">
-                    <a href="produto_07.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
-                        <img src="carros/renault-sandero.jpg" alt="renault-sandero" class="rounded-3 d-block w-100">
-                        <h4>RENAULT SANDERO<br>R$51.770</h4>
-                        <p>
-                            2017 - 72.155 Km
-                        </p>
-                    </a>
+        <section>
+            <div class="container p-5">
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 col-xl-3 text-center">
+                        <a href="produto_01.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
+                            <img src="carros/jeep-cherokee.jpg" alt="jeep-cherokee" class="rounded-3 d-block w-100">
+                            <h4>JEEP GRAND CHEROKEE<br>R$119.990,00</h4>
+                            <p>
+                                2015 - 100.000 Km
+                            </p>
+                        </a>
+                    </div>  
+                    <div class="col-md-6 col-lg-4 col-xl-3 text-center">
+                        <a href="produto_02.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
+                            <img src="carros/volkswagen-polo.jpg" alt="volkswagen-polo" class="rounded-3 d-block w-100">
+                            <h4>VOLKSWAGEN POLO<br>R$72.900,00</h4>
+                            <p>
+                                2021 - 56.000 Km
+                            </p>
+                        </a>
+                    </div> 
+                    <div class="col-md-6 col-lg-4 col-xl-3 text-center">
+                        <a href="produto_03.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
+                            <img src="carros/chevrolet-onix.jpg" alt="chevrolet-onix-plus" class="rounded-3 d-block w-100">
+                            <h4>CHEVROLET ONIX PLUS<br>R$105.990,00</h4>
+                            <p>
+                                2022 - 25.000 Km
+                            </p>
+                        </a>
+                    </div> 
+                    <div class="col-md-6 col-lg-4 col-xl-3 text-center">
+                        <a href="produto_04.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
+                            <img src="carros/fiat-argo.jpg" alt="fiat-argo" class="rounded-3 d-block w-100">
+                            <h4>FIAT ARGO<BR>R$56.900,00</h4>
+                            <p>
+                                2017 - 119.000 Km
+                            </p>
+                        </a>
+                    </div> 
+                    <div class="col-md-6 col-lg-4 col-xl-3 text-center">
+                        <a href="produto_05.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
+                            <img src="carros/renault-captur.jpg" alt="renault-captur" class="rounded-3 d-block w-100">
+                            <h4>RENAULT CAPTUR<br>R$86.180,00</h4>
+                            <p>
+                                2020 - 85.600 Km
+                            </p>
+                        </a>
+                    </div> 
+                    <div class="col-md-6 col-lg-4 col-xl-3 text-center">
+                        <a href="produto_06.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
+                            <img src="carros/fiat-toro.jpg" alt="fiat-toro" class="rounded-3 d-block w-100">
+                            <h4>FIAT TORO<br>R$102.000,00</h4>
+                            <p>
+                                2018 - 62.000 Km
+                            </p>
+                        </a>
+                    </div> 
+                    <div class="col-md-6 col-lg-4 col-xl-3 text-center">
+                        <a href="produto_07.html" class="card rounded-3 mb-4 text-muted text-decoration-none shadow">
+                            <img src="carros/renault-sandero.jpg" alt="renault-sandero" class="rounded-3 d-block w-100">
+                            <h4>RENAULT SANDERO<br>R$51.770</h4>
+                            <p>
+                                2017 - 72.155 Km
+                            </p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
 
         <!--Rodapé com informações de localização e contato-->
-        <footer class=" bg-dark text-bg-dark mt-auto"> 
+        <footer class=" bg-dark text-bg-dark mt-auto">
             <div id="contact-area" class=" py-4">
                 <div class="container  text-center">
                     <div class="row">
@@ -127,13 +133,12 @@
                         </div>
                     </div>
                 </div>
-                
             </div>                           
             <div id="copy-area text-center">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <p>Desenvolvido por <a href="">Grupo 16</a> &copy; 2022</p> 
+                            <p>Desenvolvido por <a href="#">Grupo 16</a> &copy; 2022</p> 
                         </div>
                     </div>
                 </div>
