--- a/produto_01.html
+++ b/produto_01.html
@@ -16,8 +16,12 @@
     <body class="d-flex flex-column">
         <!--Navbar-->
         <header class="navbar navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a href="index.html" class="navbar-brand d-block w-25"><img src="logos/logo_negativo.svg"></a>
+            <div class="container">
+                <div class="navbar-brand">
+                    <a href="index.html" class="d-block w-25 h-25">
+                        <img src="logos/logo_negativo.svg">
+                    </a>
+                </div>
             </div>
         </header>
 
@@ -34,7 +38,7 @@
                             <div class="card-img-left mb-2">
                                 <a href="#" class="bt-modal text-muted text-decoration-none" data-bs-toggle="modal" data-bs-target="#show-img">
                                     <img src="carros/jeep-cherokee.jpg" alt="jeep-cherokee" class="img-fluid rounded ">
-                                </a>                               
+                                </a>      
                             </div>
                         </div>
                         <div class="col-md-5">
@@ -49,6 +53,9 @@
                                         <p class="col-6">Câmbio Automático</p>
                                         <p class="col-6">Direção Elétrica</p>
                                         <p class="col-6">5 Portas</p>
+                                        <div>
+                                            <a href="#"></a>
+                                        </div>
                                     </div>  
                                 </div>
                                 <div class="text-bg-dark mb-2 p-3">
